src/main/webapp/styles/styles.css
/* load custom font(s) */
@import url(https://fonts.googleapis.com/css?family=Marcellus+SC);

:focus
{
    outline: none;
}
a
{
    text-decoration: none;
}
body
{
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    font-size: 16px;
}
#wrapper
{
    height: 720px;
    width: 1280px;
    display: flex;
    border-color: #877656;
    border-width: 2px;
    border-style: solid;
    border-radius: 10px;
    background-color: black;
    background-repeat: no-repeat;
    background-position: center;
    background-image: url(../images/you-died.png),
                       url(../images/background-home.png);
}
#wrapper.nav-about
{
    background-image: url(../images/you-died.png),
                       url(../images/background-about.png);
}
#wrapper.nav-faq
{
    background-image: url(../images/you-died.png),
                       url(../images/background-faq.png);
}
#wrapper.nav-results
{
    background-image: url(../images/you-died.png),
                       url(../images/background-results.png);
}
#wrapper.nav-stats
{
    background-image: url(../images/you-died.png),
                       url(../images/background-stats.png);
}
#wrapper.nav-about #navAbout:not(:hover),
#wrapper.nav-faq #navFaq:not(:hover),
#wrapper.nav-home #navHome:not(:hover),
#wrapper.nav-stats #navStats:not(:hover)
{
    border-color: #e4e4e4;
    border-width: 1px 0;
    border-style: solid;
}
#wrapper.nav-about #contentFaq
{
    display: none;
}
#wrapper.nav-about #contentHome
{
    display: none;
}
#wrapper.nav-about #contentStats
{
    display: none;
}
#wrapper.nav-faq #contentAbout,
#wrapper.nav-faq #contentHome,
#wrapper.nav-faq #contentStats
{
    display: none;
}
#wrapper.nav-home #contentAbout
{
    display: none;
}
#wrapper.nav-home #contentFaq
{
    display: none;
}
#wrapper.nav-home #contentStats
{
    display: none;
}
#wrapper.nav-stats #contentAbout,
#wrapper.nav-stats #contentFaq,
#wrapper.nav-stats #contentHome
{
    display: none;
}
.content-left
{
    width: 50%;
    display: flex;
    flex-direction: column;
    color: #e4e4e4;
    font-family: Garamond,serif;
    text-align: center;
}
.navbar
{
    height: 53px;
    font-family: Marcellus SC;
    padding: 28px 60px 0 60px;
    cursor: default;
    margin-bottom: 30px;
}
.navbar-bullet-start
{
    padding: 6px 5px 6px 0;
}
.navbar-bullet
{
    padding: 6px 5px;
}
.navbar-bullet-end
{
    padding: 6px 0 6px 5px;
}
.navlink
{
    display: inline-block;
    background-color: transparent;
    margin: 0 0 18px 0;
    transition: 0.3s;
    padding:6px;
    width: 86px;
    cursor: pointer;
    border-width: 1px 0;
    border-color: transparent;
    border-style: solid;
}
.navlink:hover
{
    background-color: #4f1f05;
    transition: 0.3s;
}
.navbar span
{
    color: #e4e4e4;
}
#contentBody
{
    flex-grow: 1;
    overflow: auto;
    margin: 0 40px;
    padding: 0 10px;
}
#contentBody a
{
    color: #877656;
    position: relative;
}
#contentBody a:before
{
    content: "";
    position: absolute;
    width: 100%;
    height: 1px;
    bottom: 0;
    left: 0;
    background-color: #877656;
    visibility: hidden;
    transform: scaleX(0);
    transition: all 0.2s ease-in-out 0s;
}
#contentBody a:hover:before
{
    visibility: visible;
    transform: scaleX(1);
}
.uppercase
{
    font-family: Marcellus SC;
}
.description-top
{
    padding-bottom: 30px;
}
#fileName
{
    font-family: Garamond,serif;
    font-size: 14px;
    color: #e4e4e4;
    border: 1px solid #e4e4e4;
    border-radius: 3px;
    background-color: black;
    text-align: center;
    width: 450px;
    height: 28px;
    margin-bottom: 7px;
}
form
{
    margin-block-end: 0;
}
.file-uploader,
#submit
{
    font-family:Marcellus SC;
    font-size: 16px;
}
/*Inputfile code from https://tympanus.net/codrops/2015/09/15/styling-customizing-file-inputs-smart-way/*/
.inputfile
{
	width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}
.inputfile+label
{
line-height: 29px;
}
.inputfile+label,
.inputfile~#submit
{
    color: #e4e4e4;
    background-color: black;
    border-color: #e4e4e4;
    border-width: 1px;
    border-style: solid;
    display: inline-block;
    cursor: pointer;
    width: 120px;
    height: 30px;
    margin: 7px;
    box-sizing: border-box;
}
.inputfile:focus+label,
#submit,
.inputfile+label:hover,
#submit:hover
{
    background-color: #4f1f05;
    border-color: #4f1f05;
    border-width: 1px;
    border-style: solid;
    transition: 0.3s;
}
.inputfile:focus + label,
.inputfile:focus~#submit
{
    outline: 1px dotted #000;
    outline: -webkit-focus-ring-color auto 5px;
}
.description-bottom
{
    padding: 19px 0 0 0;
}
.copyright-notice
{
    height: 53px;
    font-size: 13px;
    padding: 0 60px 30px;
    margin-top: 30px;
}
.divider-line
{
    border-color: #877656;
    border-width: 2px;
    border-style: solid none;
    height: 2px;
}
.disclaimer
{
    padding-top: 20px;
    color: #877656;
}

